[gd_scene load_steps=16 format=2]

[ext_resource path="res://main/2d_viewport.gd" type="Script" id=1]
[ext_resource path="res://3d_viewport/material.tres" type="Material" id=2]
[ext_resource path="res://main/main.gd" type="Script" id=3]
[ext_resource path="res://main/layer_property_panel.gd" type="Script" id=6]
[ext_resource path="res://3d_viewport/model.gd" type="Script" id=8]
[ext_resource path="res://texture_channel_buttons/texture_channel_buttons.tscn" type="PackedScene" id=9]
[ext_resource path="res://3d_viewport/environment.tres" type="Environment" id=10]
[ext_resource path="res://main/asset_browser.gd" type="Script" id=11]
[ext_resource path="res://3d_viewport/models/plasma_gun.obj" type="ArrayMesh" id=12]
[ext_resource path="res://main/material_layer_popup_menu.gd" type="Script" id=16]
[ext_resource path="res://addons/property_panel/property_panel.tscn" type="PackedScene" id=17]
[ext_resource path="res://addons/rotating_camera/rotating_camera.tscn" type="PackedScene" id=19]
[ext_resource path="res://3d_viewport/3d_viewport.gd" type="Script" id=20]
[ext_resource path="res://main/layer_tree.gd" type="Script" id=21]

[sub_resource type="ImageTexture" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopButtonBar" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 34.0

[node name="TopButtons" type="HBoxContainer" parent="VBoxContainer/TopButtonBar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenuButton" type="MenuButton" parent="VBoxContainer/TopButtonBar/TopButtons"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Export", null, 0, false, false, 3, 0, null, "", false ]
switch_on_hover = true

[node name="EditMenuButton" type="MenuButton" parent="VBoxContainer/TopButtonBar/TopButtons"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
text = "Edit"
switch_on_hover = true

[node name="ViewMenuButton" type="MenuButton" parent="VBoxContainer/TopButtonBar/TopButtons"]
margin_left = 79.0
margin_right = 121.0
margin_bottom = 20.0
text = "View"
switch_on_hover = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 555.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/LayerContainer"]
margin_right = 756.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportTabContainer" type="TabContainer" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer"]
margin_right = 756.0
margin_bottom = 365.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="3DViewport" type="ViewportContainer" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer/ViewportTabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 20 )

[node name="Viewport" type="Viewport" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer/ViewportTabContainer/3DViewport"]
size = Vector2( 748, 329 )
handle_input_locally = false
render_target_update_mode = 3

[node name="RotatingCamera" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer/ViewportTabContainer/3DViewport/Viewport" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.850238, -0.605874 )

[node name="Model" type="MeshInstance" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer/ViewportTabContainer/3DViewport/Viewport"]
mesh = ExtResource( 12 )
material/0 = ExtResource( 2 )
script = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer/ViewportTabContainer/3DViewport/Viewport"]
environment = ExtResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer/ViewportTabContainer/3DViewport/Viewport"]
transform = Transform( 0.788462, -0.446122, 0.423442, 0, 0.68843, 0.725302, -0.615084, -0.571873, 0.542801, 0, 3.22287, 0 )

[node name="2DViewport" type="TextureRect" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer/ViewportTabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
texture = SubResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 1 )

[node name="AssetBrowser" type="TabContainer" parent="VBoxContainer/PanelContainer/LayerContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 756.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.49
script = ExtResource( 11 )

[node name="LayerTree" type="VBoxContainer" parent="VBoxContainer/PanelContainer/LayerContainer"]
margin_left = 760.0
margin_right = 1010.0
margin_bottom = 548.0
rect_min_size = Vector2( 250, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree"]
margin_right = 250.0
margin_bottom = 20.0
alignment = 2

[node name="AddButton" type="Button" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree/HBoxContainer"]
margin_left = 209.0
margin_right = 229.0
margin_bottom = 20.0
text = "+"

[node name="DeleteButton" type="Button" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree/HBoxContainer"]
margin_left = 233.0
margin_right = 250.0
margin_bottom = 20.0
text = "-"

[node name="LayerTree" type="Tree" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/draw_guides = 1
custom_constants/draw_relationship_lines = 1
hide_folding = true
hide_root = true
script = ExtResource( 21 )

[node name="MaterialLayerPopupMenu" type="PopupMenu" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree"]
margin_right = 133.0
margin_bottom = 52.0
items = [ "save to library", null, 0, false, false, 0, 0, null, "", false, "add mask", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapTypePopupMenu" type="PopupMenu" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree"]
margin_right = 99.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureChannelButtons" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree" instance=ExtResource( 9 )]
visible = false
margin_top = 286.0
margin_right = 250.0
margin_bottom = 286.0

[node name="LayerPropertyPanel" parent="VBoxContainer/PanelContainer/LayerContainer/LayerTree" instance=ExtResource( 17 )]
margin_top = 288.0
margin_right = 250.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.5
margin_top = -143.5
margin_right = 244.5
margin_bottom = 143.5
rect_min_size = Vector2( 100, 35 )
access = 2
filters = PoolStringArray( "*.tres;Material Painter File" )
current_dir = "/home/jummit/Games/MaterialPainter/Layers"
current_path = "/home/jummit/Games/MaterialPainter/Layers/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="button_pressed" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" to="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" method="_on_button_pressed"]
[connection signal="cell_selected" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" to="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" method="_on_cell_selected"]
[connection signal="item_rmb_selected" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" to="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" method="_on_item_rmb_selected"]
[connection signal="material_layer_selected" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" to="." method="_on_LayerTree_material_layer_selected"]
[connection signal="texture_layer_selected" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" to="." method="_on_LayerTree_texture_layer_selected"]
[connection signal="index_pressed" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree/MaterialLayerPopupMenu" to="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree/MaterialLayerPopupMenu" method="_on_index_pressed"]
[connection signal="layer_saved" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree/MaterialLayerPopupMenu" to="." method="_on_MaterialLayerPopupMenu_layer_saved"]
[connection signal="layer_selected" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree/MaterialLayerPopupMenu" to="." method="_on_AddLayerPopupMenu_layer_selected"]
[connection signal="mask_added" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree/MaterialLayerPopupMenu" to="." method="_on_MaterialLayerPopupMenu_mask_added"]
[connection signal="id_pressed" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree/MapTypePopupMenu" to="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerTree" method="_on_MapTypePopupMenu_id_pressed"]
[connection signal="changed" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/TextureChannelButtons" to="." method="_on_TextureChannelButtons_changed"]
[connection signal="values_changed" from="VBoxContainer/PanelContainer/LayerContainer/LayerTree/LayerPropertyPanel" to="." method="_on_LayerPropertyPanel_values_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
